MVP Final verison

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+Cloud_Name = dm8zhvlrs
+API_KEY = 199185321791639
+API_SECRET = UNtyXPygJ11gK1kHIn1_juoKFVI
